Bug 1303083 - Make CubebUtils::PreferredSampleRate handle InitPreferredSampleRate failures.  r=padenot